--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: go
 go:
   - "1.14.x"
   - "1.15.x"
+  - "1.16.x"
 
 sudo: false
 
@@ -10,6 +11,7 @@ os:
   - linux
  
 install:
+  - go mod tidy
   - go mod download
 
 script:
