--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ script:
   - go test -v ./...
 
 after_success:
-  - go test -v -short -bench . ./...
+  - go test -v -short -bench . -run=^$ ./...
