reduce ci time first

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: go
 
 go:
-  - "1.15.x"
-  - "1.16.x"
+#  - "1.15.x"
+#  - "1.16.x"
   - "1.17.x"
 
 jobs:
   include:
-    - arch: ppc64le
-      go: 1.17.x
+ #   - arch: ppc64le
+ #     go: 1.17.x
     - arch: arm64-graviton2
       virt: vm
       os: linux
@@ -23,5 +23,5 @@ install:
 script:
   - go test -v ./...
 
-after_success:
-  - go test -v -short -bench . -run=^$ ./...
+#after_success:
+#  - go test -v -short -bench . -run=^$ ./...
