[SM4] - implement gcmSm4Init

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ install:
 script:
   - go test -v ./...
 
-after_success:
-  - go test -v -short -bench . -run=^$ ./...
+#after_success:
+#  - go test -v -short -bench . -run=^$ ./...
