--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goVer: [ '1.15', '1.16', '1.17' ]    
+        goVer: [ '1.15']    
     steps:
     - uses: actions/checkout@v2
 
@@ -21,6 +21,19 @@ jobs:
       with:
         go-version: ${{ matrix.goVer }}
 
+    - name: Setup Environment
+      run: |
+         echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
+         echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
+    - name: Module cache
+      uses: actions/cache@v2.1.7
+      env:
+        cache-name: go-mod-cache
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/go.sum') }}
+          
     - name: Build
       run: go build -v ./...
 
