--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goVer: [ '1.15', '1.16', '1.17']    
+        goVer: [ '1.15']    
     steps:
     - uses: actions/checkout@v2
 
