[SM2] optimize inverse

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: go
 
 jobs:
   include:
-#    - arch: ppc64le
-#      go: 1.17.x
+    - arch: ppc64le
+      go: 1.17.x
     - arch: arm64-graviton2
       virt: vm
       os: linux
