--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,6 @@ jobs:
           
     - name: Test
       run: go test -v -short ./...
+      
+    - name: Test Generic
+      run: go test -v -short -tags generic ./...      
