change build tag generic to purego & import nat package

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       run: go test -coverpkg=./... -v -short -coverprofile=coverage1.txt -covermode=atomic ./...
 
     - name: Test Generic
-      run: go test -coverpkg=./... -v -short -tags generic  -coverprofile=coverage2.txt -covermode=atomic ./...      
+      run: go test -coverpkg=./... -v -short -tags purego  -coverprofile=coverage2.txt -covermode=atomic ./...      
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
