ci: test plugin build flag #154

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,9 @@ jobs:
       run: go test -short -tags purego ./...      
       env:
         GODEBUG: x509sha1=1
+
+    - name: Test Plugin only
+      if: ${{ matrix.goVer != '1.18' }}
+      run: go test -short -tags plugin ./...      
+      env:
+        GODEBUG: x509sha1=1
