fix macos action

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -23,3 +23,6 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+      env:
+        GODEBUG: x509sha1=1
+        GOARCH: ${{ matrix.arch }}      
