--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,11 @@ jobs:
       with:
         files: ./coverage1.txt,./coverage2.txt
 
+    - name: Test Force SM4 Single Block with AES-NI
+      run: go test -short sm4/...      
+      env:
+        FORCE_SM4BLOCK_AESNI: 1
+
     - name: Test only
       if: ${{ matrix.goVer != '1.18' }}
       run: go test -short ./...
