--- a/.github/workflows/test_qemu.yml
+++ b/.github/workflows/test_qemu.yml
@@ -36,3 +36,9 @@ jobs:
         DISABLE_SM4NI: 1
         GODEBUG: x509sha1=1
         GOARCH: ${{ matrix.arch }}      
+
+    - name: Test Force SM4 Single Block with AES-NI
+      run: go test -v -short sm4/...      
+      env:
+        DISABLE_SM4NI: 1
+        FORCE_SM4BLOCK_AESNI: 1
