--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goVer: ['1.18', '1.19', '1.21', '1.22']    
+        goVer: ['1.18', '1.19', '1.21']    
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v4
