limist the test scope

--- a/.github/workflows/test_riscv64.yaml
+++ b/.github/workflows/test_riscv64.yaml
@@ -30,7 +30,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Test
-      run: go test -v -short ./...
+      run: go test -v -short ./internal/bigmod/...
       env:
         GODEBUG: x509sha1=1
         GOARCH: ${{ matrix.arch }}      
