ci: build riscv64

--- a/.github/workflows/test_riscv64.yaml
+++ b/.github/workflows/test_riscv64.yaml
@@ -28,6 +28,9 @@ jobs:
 
     - name: Check out code
       uses: actions/checkout@v4
+
+    - name: Build
+      run: go build -v ./internal/bigmod/...
       
     - name: Test
       run: go test -v -short ./internal/bigmod/...
