--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
        
     - name: Test with Coverage
       if: ${{ matrix.goVer == '1.18' }}
-      run: go test -coverpkg=./... -v -short -coverprofile=coverage1.txt -covermode=atomic ./...
+      run: go test -coverpkg=./... -v -short -race -coverprofile=coverage1.txt -covermode=atomic ./...
       env:
         GODEBUG: x509sha1=1
 
