--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,12 @@ jobs:
 
     - name: Upload coverage to Codecov
       if: ${{ matrix.goVer == '1.18' }}
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         files: ./coverage1.txt,./coverage2.txt
-
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+  
     - name: Test Force SM4 Single Block with AES-NI
       run: go test -short ./sm4/...      
       env:
