--- a/.github/workflows/test_s390x.yaml
+++ b/.github/workflows/test_s390x.yaml
@@ -32,5 +32,8 @@ jobs:
     - name: Test bigmod
       run: go test -v -short ./internal/bigmod/...
  
+    - name: Test sm2ec
+      run: go test -v -short ./internal/sm2ec/...
+
     - name: Test subtle
       run: go test -v -short ./internal/subtle/...
