test s390x sm2 functions

--- a/.github/workflows/test_s390x.yaml
+++ b/.github/workflows/test_s390x.yaml
@@ -29,7 +29,12 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v4
 
-    - name: Test
-      run: go test -v -short ./...
+    - name: Test KDF
+      run: go test -v -short ./kdf/...
+      env:
+        GOARCH: ${{ matrix.arch }}     
+  
+    - name: Test SM2
+      run: go test -v -short ./sm2/...
       env:
         GOARCH: ${{ matrix.arch }}       
