--- a/.github/workflows/test_s390x.yaml
+++ b/.github/workflows/test_s390x.yaml
@@ -29,6 +29,11 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v4
 
+    - name: Test SM2EC
+      run: go test -v ./internal/sm2ec/...
+      env:
+        GOARCH: ${{ matrix.arch }}   
+  
     - name: Test SM2
       run: go test -v -short ./sm2/...
       env:
