--- a/.github/workflows/test_s390x.yaml
+++ b/.github/workflows/test_s390x.yaml
@@ -32,16 +32,12 @@ jobs:
     - name: Test SM2EC
       run: go test -v ./internal/sm2ec/...
       env:
-        GOARCH: ${{ matrix.arch }}   
+        GOARCH: ${{ matrix.arch }}
   
-    - name: Test SM2
-      run: go test -v -short ./sm2/...
+    - name: Test
+      run: go test -v -short ./...
       env:
         GOARCH: ${{ matrix.arch }}   
-  
-    - name: Test KDF
-      run: go test -v -short ./kdf/...
-      env:
-        GOARCH: ${{ matrix.arch }}     
+
  
     
