CI: s390x enable sha1 for test

--- a/.github/workflows/test_s390x.yaml
+++ b/.github/workflows/test_s390x.yaml
@@ -37,6 +37,7 @@ jobs:
     - name: Test
       run: go test -v -short ./...
       env:
+        GODEBUG: x509sha1=1      
         GOARCH: ${{ matrix.arch }}   
 
  
