--- a/.github/workflows/test_ppc64.yaml
+++ b/.github/workflows/test_ppc64.yaml
@@ -34,7 +34,7 @@ jobs:
       env:
         GOARCH: ${{ matrix.arch }}      
 
-    - name: Test
-      run: go test -v -short ./internal/sm2ec/...
+    - name: Test SM2EC
+      run: go test -v ./internal/sm2ec/...
       env:
         GOARCH: ${{ matrix.arch }}      
