--- a/.github/workflows/test_ppc64.yaml
+++ b/.github/workflows/test_ppc64.yaml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       matrix:
         go-version: [1.19.x]
-        arch: [ppc64le]  
+        arch: [ppc64le]
+        ppc64: [power8,power9]
     runs-on: ubuntu-latest
     steps:
     - name: Set up Go
@@ -32,5 +33,11 @@ jobs:
     - name: Test internal
       run: go test ./internal/...
       env:
-        GOARCH: ${{ matrix.arch }}      
+        GOARCH: ${{ matrix.arch }}
+        GOPPC64: ${{ matrix.ppc64 }}
 
+    - name: Test SM3
+      run: go test ./sm3/...
+      env:
+        GOARCH: ${{ matrix.arch }}
+        GOPPC64: ${{ matrix.ppc64 }}
