--- a/.github/workflows/test_ppc64.yaml
+++ b/.github/workflows/test_ppc64.yaml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         go-version: [1.19.x]
         arch: [ppc64le]
-        ppc64: [power8,power9]
+        ppc64: [power8]
     runs-on: ubuntu-latest
     steps:
     - name: Set up Go
