sm4: is it really related to ctr change?

--- a/.github/workflows/test_ppc64.yaml
+++ b/.github/workflows/test_ppc64.yaml
@@ -42,6 +42,19 @@ jobs:
         GOARCH: ${{ matrix.arch }}
         GOPPC64: ${{ matrix.ppc64 }}
 
+    - name: Test Cipher
+      run: go test -v -short ./cipher/...
+      env:
+        GOARCH: ${{ matrix.arch }}
+        GOPPC64: ${{ matrix.ppc64 }}
+
+    - name: Test Cipher Force SM4 Single Block with AES-NI
+      run: go test -v -short ./cipher/...
+      env:
+        GOARCH: ${{ matrix.arch }}
+        GOPPC64: ${{ matrix.ppc64 }}
+        FORCE_SM4BLOCK_AESNI: 1
+
     - name: Test Force SM4 Single Block with AES-NI
       run: go test -v -short ./sm4/...
       env:
