--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goVer: ['1.18', '1.19', '1.21', '1.22']    
+        goVer: ['1.18', '1.19', '1.21', '1.22', '1.23']
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v4
@@ -36,7 +36,7 @@ jobs:
 
     - name: Upload coverage to Codecov
       if: ${{ matrix.goVer == '1.18' }}
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v5
       with:
         files: ./coverage1.txt,./coverage2.txt
       env:
