ci: test purego ignore 1.23 first, there's one bug in golang

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         GODEBUG: x509sha1=1
 
     - name: Test Generic only
-      if: ${{ matrix.goVer != '1.18' }}
+      if: ${{ matrix.goVer != '1.18' && matrix.goVer != '1.23' }}
       run: go test -short -tags purego ./...      
       env:
         GODEBUG: x509sha1=1
