--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -2,9 +2,9 @@ name: macOs
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "go_1.18" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "go_1.18" ]
 
 jobs:
 
