--- a/.github/workflows/test_ppc64.yaml
+++ b/.github/workflows/test_ppc64.yaml
@@ -5,9 +5,9 @@ name: ppc64le-qemu
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "go_1.18" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "go_1.18" ]
 
 jobs:
 
