--- a/.github/workflows/test_sm_ni.yml
+++ b/.github/workflows/test_sm_ni.yml
@@ -5,9 +5,9 @@ name: sm3-sm4-ni-qemu
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "go_1.18" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "go_1.18" ]
 
 jobs:
 
