--- a/.github/workflows/licenses.yml
+++ b/.github/workflows/licenses.yml
@@ -1,7 +1,7 @@
 name: Update License File
 on:
   push:
-    branches: [ main ]
+    branches: [ "develop" ]
     paths:
       - 'go.mod'
       - 'go.sum'
