--- a/.github/workflows/test_qemu.yml
+++ b/.github/workflows/test_qemu.yml
@@ -5,9 +5,9 @@ name: arm64-qemu
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop", "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop", "main" ]
 
 permissions:
   contents: read
