update branch actions

--- a/.github/workflows/test_loong64.yml
+++ b/.github/workflows/test_loong64.yml
@@ -5,9 +5,9 @@ name: loong64-qemu
 
 on:
   push:
-    branches: [ "develop", "main" ]
+    branches: [ "loong64"]
   pull_request:
-    branches: [ "develop", "main" ]
+    branches: [ "loong64"]
 
 permissions:
   contents: read
